# bsv-auth-axum-middleware

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_auth_server.rs
src/: certificate.rs  config.rs  error.rs  extractor.rs  helpers.rs  lib.rs  middleware.rs  payload.rs  transport.rs
tests/: certificate_gate.rs  certificate_serde_tests.rs  certificate_tests.rs  handshake.rs  integration_tests.rs  request_signing.rs  response_signing.rs  smoke.rs
tests/common/: mod.rs  test_server.rs
